--- a/main.css
+++ b/main.css
@@ -77,8 +77,8 @@ body::after {
     border: none;
     padding: 0; /* Remove padding */
     border-radius: 50%;
-    width: 70px;  /* Smaller width */
-    height: 70px;  /* Smaller height */
+    width: 50px;  /* Smaller width */
+    height: 50px;  /* Smaller height */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -117,7 +117,7 @@ button:active {
 .footer {
     background-color: rgba(0, 0, 0, 0.7); /* Optional: background for the footer */
     width: 100%;
-    padding: 10px 0;
+    padding: 5px 0;
     text-align: center;
     color: white;
 }
@@ -143,10 +143,10 @@ button:active {
 /* Styling for h1 element */
 #main-heading {
     font-family: 'Roboto', sans-serif; /* Use a nice, modern font like Roboto */
-    font-size: 2.5em; /* Adjust the size of the text */
+    font-size: 2rem; /* Adjust the size of the text */
     color: white; /* Make the text white */
     text-align: center; /* Center align the text */
-    margin-top: 20px; /* Add some space between the logo and the heading */
+    margin-top: 10px; /* Add some space between the logo and the heading */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Optional: add shadow for better readability */
 }
 
