--- a/main.css
+++ b/main.css
@@ -77,8 +77,8 @@ body::after {
     border: none;
     padding: 0; /* Remove padding */
     border-radius: 50%;
-    width: 60px;  /* Smaller width */
-    height: 60px;  /* Smaller height */
+    width: 75px;  /* Smaller width */
+    height: 75px;  /* Smaller height */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -194,3 +194,7 @@ img1 {
     margin: 0 auto;
     object-fit: contain; /* Ensures image is resized while maintaining aspect ratio */
 }
+
+a {
+    color: rgb(32, 31, 31); /* Change to any color you like */
+  }
