--- a/style.css
+++ b/style.css
@@ -200,23 +200,23 @@ p {
 
 .home-button {
     position: fixed;
-
     top: 50px; /* Distance from the top */
-    right: 20px; /* Distance from the right */
+    right: 10px; /* Distance from the right */
     z-index: 1000; /* Ensure it's above other content */
 }
 
 .home-button button {
-    background-color: #4CAF50; /* Green background */
+    background-color: #9b9e89; /* Green background */
     color: white; /* White text */
-    padding: 10px 20px; /* Some padding */
+    padding: 7px 15px; /* Some padding */
     border: none; /* No border */
     border-radius: 5px; /* Rounded corners */
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 700;
     cursor: pointer;
 }
 
 .home-button button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #0c0c0c; /* Darker green on hover */
 }
 
